; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/iser/extr_iser_verbs.c_iser_free_device_ib_res.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/iser/extr_iser_verbs.c_iser_free_device_ib_res.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iser_device = type { i32, i32*, i32*, %struct.iser_comp*, i32 }
%struct.iser_comp = type { i32*, i32 }

@M_ISER_VERBS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iser_device*)* @iser_free_device_ib_res to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iser_free_device_ib_res(%struct.iser_device* %0) #0 {
  %2 = alloca %struct.iser_device*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.iser_comp*, align 8
  store %struct.iser_device* %0, %struct.iser_device** %2, align 8
  store i32 0, i32* %3, align 4
  br label %5

5:                                                ; preds = %28, %1
  %6 = load i32, i32* %3, align 4
  %7 = load %struct.iser_device*, %struct.iser_device** %2, align 8
  %8 = getelementptr inbounds %struct.iser_device, %struct.iser_device* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = icmp slt i32 %6, %9
  br i1 %10, label %11, label %31

11:                                               ; preds = %5
  %12 = load %struct.iser_device*, %struct.iser_device** %2, align 8
  %13 = getelementptr inbounds %struct.iser_device, %struct.iser_device* %12, i32 0, i32 3
  %14 = load %struct.iser_comp*, %struct.iser_comp** %13, align 8
  %15 = load i32, i32* %3, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.iser_comp, %struct.iser_comp* %14, i64 %16
  store %struct.iser_comp* %17, %struct.iser_comp** %4, align 8
  %18 = load %struct.iser_comp*, %struct.iser_comp** %4, align 8
  %19 = getelementptr inbounds %struct.iser_comp, %struct.iser_comp* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @taskqueue_free(i32 %20)
  %22 = load %struct.iser_comp*, %struct.iser_comp** %4, align 8
  %23 = getelementptr inbounds %struct.iser_comp, %struct.iser_comp* %22, i32 0, i32 0
  %24 = load i32*, i32** %23, align 8
  %25 = call i32 @ib_destroy_cq(i32* %24)
  %26 = load %struct.iser_comp*, %struct.iser_comp** %4, align 8
  %27 = getelementptr inbounds %struct.iser_comp, %struct.iser_comp* %26, i32 0, i32 0
  store i32* null, i32** %27, align 8
  br label %28

28:                                               ; preds = %11
  %29 = load i32, i32* %3, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %3, align 4
  br label %5

31:                                               ; preds = %5
  %32 = load %struct.iser_device*, %struct.iser_device** %2, align 8
  %33 = getelementptr inbounds %struct.iser_device, %struct.iser_device* %32, i32 0, i32 4
  %34 = call i32 @ib_unregister_event_handler(i32* %33)
  %35 = load %struct.iser_device*, %struct.iser_device** %2, align 8
  %36 = getelementptr inbounds %struct.iser_device, %struct.iser_device* %35, i32 0, i32 1
  %37 = load i32*, i32** %36, align 8
  %38 = call i32 @ib_dealloc_pd(i32* %37)
  %39 = load %struct.iser_device*, %struct.iser_device** %2, align 8
  %40 = getelementptr inbounds %struct.iser_device, %struct.iser_device* %39, i32 0, i32 3
  %41 = load %struct.iser_comp*, %struct.iser_comp** %40, align 8
  %42 = load i32, i32* @M_ISER_VERBS, align 4
  %43 = call i32 @free(%struct.iser_comp* %41, i32 %42)
  %44 = load %struct.iser_device*, %struct.iser_device** %2, align 8
  %45 = getelementptr inbounds %struct.iser_device, %struct.iser_device* %44, i32 0, i32 3
  store %struct.iser_comp* null, %struct.iser_comp** %45, align 8
  %46 = load %struct.iser_device*, %struct.iser_device** %2, align 8
  %47 = getelementptr inbounds %struct.iser_device, %struct.iser_device* %46, i32 0, i32 2
  store i32* null, i32** %47, align 8
  %48 = load %struct.iser_device*, %struct.iser_device** %2, align 8
  %49 = getelementptr inbounds %struct.iser_device, %struct.iser_device* %48, i32 0, i32 1
  store i32* null, i32** %49, align 8
  ret void
}

declare dso_local i32 @taskqueue_free(i32) #1

declare dso_local i32 @ib_destroy_cq(i32*) #1

declare dso_local i32 @ib_unregister_event_handler(i32*) #1

declare dso_local i32 @ib_dealloc_pd(i32*) #1

declare dso_local i32 @free(%struct.iser_comp*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
